# lenguaje_de_programacion

./: .gitignore
lenguaje_programacion/Task Manager Go/: command_test.go  commands.go  go.mod  main.go  storage.go  storage_test.go  task.go  task_test.go  taskcli
lenguaje_programacion/Task Manager Rust/: Cargo.toml
lenguaje_programacion/Task Manager Rust/src/: lib.rs  main.rs  storage.rs  types.rs
lenguaje_programacion/Task Manager Rust/src/operations/: add.rs  delete.rs  list.rs  mod.rs  status.rs  update.rs
lenguaje_programacion/Task Manager Rust/tests/: add_tests.rs  delete_tests.rs  list_tests.rs  status_tests.rs  storage_tests.rs  update_tests.rs
lenguaje_programacion/coffee-project/: README.md
lenguaje_programacion/coffee-project/backend/: server.js
lenguaje_programacion/coffee-project/backend/data/: coffees.json  users.json
lenguaje_programacion/coffee-project/backend/routes/: auth.js  coffees.js
lenguaje_programacion/coffee-project/frontend/: package-lock.json
lenguaje_programacion/coffee-project/frontend/src/: App.vue
lenguaje_programacion/coffee-project/frontend/src/router/: index.js
lenguaje_programacion/coffee-project/frontend/src/services/: api.js
lenguaje_programacion/coffee-project/frontend/src/views/: CoffeeMenu.vue  Register.vue
