[package]
name = "task-tracker"
version = "0.1.0"
edition = "2021"

[lib]
name = "task_tracker"
path = "src/lib.rs"

[[bin]]
name = "task-tracker"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
prettytable-rs = "0.10"

[dev-dependencies]
tempfile = "3.8"